feat: add worksheet_01

--- a/lecture_01/worksheet_01.ipynb
+++ b/lecture_01/worksheet_01.ipynb
@@ -7,8 +7,8 @@
    "source": [
     "# Worksheet 01\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jin Young Bang\n",
+    "UID: U26738680\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -172,7 +172,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- git - version control system\n",
+    "- github - website to backup and host your files"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -184,7 +187,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "`git clone <HTTPS or SSH url of Repo>`"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -196,7 +201,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Fork button"
+   ]
   },
   {
    "attachments": {},
@@ -209,7 +216,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No. The copy on your laptop is a local copy, which means that the last most updated change is the one that exists."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -221,7 +230,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. `git add <files>`\n",
+    "2. `git commit -m \"<commit message>\"`\n",
+    "3. `git push`"
+   ]
   },
   {
    "attachments": {},
@@ -234,7 +247,10 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. `git pull upstream main` or `git fetch`\n",
+    "2. `git push upstream main` (`git rebase` is another option)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -246,7 +262,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "There are sometimes conflict between copied repos / branches because if multiple contributors are working on the same codebase/feature concurrently, their changes could conflict with each other. To resolve them, you could either perform a rebase or a merge operation depending on the use case."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -258,7 +276,15 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "1. Fork the class reposistory\n",
+    "2. `git clone <class repository link>`\n",
+    "3. Add whatever notes you have in the correct folder\n",
+    "4. `git add <file of notes>`\n",
+    "5. `git commit -m <commit message>` to describe the purpose of the commit\n",
+    "6. `git push`\n",
+    "7. Click the Pull Request button on the class repo, check if the branch can be merged to a base (ideally `main` branch), then merge it."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -270,20 +296,42 @@
   {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "- `git init`: initializes a new Git repository in current directory\n",
+    "- `git log`: view commit history\n",
+    "- `git push`: pushes local branch and commits to a remote repository\n",
+    "- `git fetch`: fetches change from remote repository\n",
+    "- `git remote`: lists all the remote repositories\n",
+    "- `git pull`: combines fetch and merge to fetch changes from remote and merges them into current branch\n",
+    "- `git rebase`: reapplies local commits on top of a different branch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.9.9 (main, Nov 19 2021, 00:00:00) \n[GCC 11.2.1 20210728 (Red Hat 11.2.1-1)]"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
@@ -291,5 +339,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
