--- a/lecture_05/worksheet_05.ipynb
+++ b/lecture_05/worksheet_05.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 05\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jin Young Bang\n",
+    "\n",
+    "UID: U26738680\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -46,7 +47,29 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We'll start with the given initial centroids, and call them `c1`, `c2` respectively. Based on the points nearest distances to both `c1` and `c2`:\n",
+    "\n",
+    "```\n",
+    "c1 (0): [0, 0.5]\n",
+    "c2 (2): [1.5, 2, 6, 6.5, 7]\n",
+    "```\n",
+    "\n",
+    "`c1`'s new centroid: `c1 = 0.25`\n",
+    "`c2`'s new centroid: `c2 = 23/5 = 4.6`\n",
+    "\n",
+    "Then, the same process occurs as again:\n",
+    "\n",
+    "```\n",
+    "c1 (0.25): [0, 0.5, 1.5, 2]\n",
+    "c2 ( 4.6): [6, 6.5, 7]\n",
+    "```\n",
+    "\n",
+    "`c1`'s new centroid: `c1 = 2`\n",
+    "`c2`'s new centroid: `c2 = 6.5`\n",
+    "\n",
+    "When we repeat the same process, the centroid remains the same, denoting that the algorithm has converged."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +81,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The cost function for k-means measures the total distance between data points and their nearest cluster center."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,7 +95,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "There can be very different solutions as the initial placement of the cluster centers are random. The outcome can depend on the initial position."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -82,7 +109,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "The algorithm always converges. The dataset is finite and the number of partitions are finite. Thus, we can reach convergence."
+   ]
   },
   {
    "attachments": {},
@@ -94,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -113,6 +142,9 @@
     "        self.k = k\n",
     "        self.assignment = [-1 for _ in range(len(data))]\n",
     "        self.snaps = []\n",
+    "\n",
+    "    def distance(self, x, y):\n",
+    "        return np.linalg.norm(np.array(x) - np.array(y))\n",
     "    \n",
     "    def snap(self, centers):\n",
     "        TEMPFILE = \"temp.png\"\n",
@@ -124,9 +156,52 @@
     "        plt.close()\n",
     "        self.snaps.append(im.fromarray(np.asarray(im.open(TEMPFILE))))\n",
     "\n",
+    "    def initialize(self):\n",
+    "        return self.data[np.random.choice(range(len(self.data)), self.k, replace=False)]\n",
+    "\n",
+    "    def assign(self, centers):\n",
+    "        for i in range(len(self.data)):\n",
+    "            minimum = self.distance(centers[0], self.data[i])\n",
+    "            self.assignment[i] = 0\n",
+    "            for j in range(1, len(centers)):\n",
+    "                dist = self.distance(centers[j], self.data[i])\n",
+    "                if dist < minimum:\n",
+    "                    minimum = dist\n",
+    "                    self.assignment[i] = j\n",
+    "         \n",
+    "        return\n",
+    "\n",
+    "    def is_diff_clusters(self, centers, new_centers):\n",
+    "        for i in range(len(centers)):\n",
+    "            if self.distance(centers[i], new_centers[i]) != 0:\n",
+    "                return True\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "    def get_centers(self):\n",
+    "        centers = []\n",
+    "        for i in set(self.assignment):\n",
+    "            cluster = []\n",
+    "            for j in range(len(self.data)):\n",
+    "                if self.assignment[j] == i:\n",
+    "                    cluster.append(self.data[j])\n",
+    "            centers.append(np.mean(cluster, axis=0))\n",
+    "        return centers\n",
+    "                    \n",
+    "\n",
     "\n",
     "    def lloyds(self):\n",
-    "        ...\n",
+    "        centers = self.initialize()\n",
+    "        self.assign(centers)\n",
+    "        self.snap(centers)\n",
+    "        new_centers = self.get_centers()\n",
+    "\n",
+    "        while self.is_diff_clusters(centers, new_centers):\n",
+    "            self.assign(new_centers)\n",
+    "            centers = new_centers\n",
+    "            self.snap(np.array(new_centers))\n",
+    "            new_centers = self.get_centers()\n",
+    "        \n",
     "        return\n",
     "            \n",
     "\n",
@@ -143,19 +218,33 @@
     "    duration=500\n",
     ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
@@ -163,5 +252,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
