--- a/lecture_06/worksheet_06.ipynb
+++ b/lecture_06/worksheet_06.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 06\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jin Young Bang\n",
+    "\n",
+    "UID: U26738680\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -23,7 +24,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "K means initializes centroids randomly.\n",
+    "\n",
+    "K means++, on the other hand, uses a smarter initialization method that spreads out initial centroids, typically resulting in more accurate and stable clustering compared to K Means."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -35,7 +40,11 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "Although K means++ improves initialization, it still doesn't guarantee an optimal solution. Another limitation is that the K means++ requires specifying the number of clusters (K) in advance, so a suboptimal results could appear if the appropriate K value is not chosen.\n",
+    "\n",
+    "It also favors clusters with similar sizes and sometimes groups a highly dense region to a cluster."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -46,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -56,8 +65,14 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "metadata": {},
-     "output_type": "display_data"
+     "execution_count": 1,
+     "metadata": {
+      "image/png": {
+       "height": 500,
+       "width": 500
+      }
+     },
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -68,7 +83,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "I would choose `k = 2` as it has the highest average silhouette score."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,11 +119,11 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | √2| 3 | 1 |√8 |\n",
+    "| B | √2| 0 |√5 | 1 |√2 |\n",
+    "| C | 3 |√5 | 0 |√10|√5 |\n",
+    "| D | 1 | 1 |√10| 0 |√5 |\n",
+    "| E |√8 |√2 | √5| √5| 0 |"
    ]
   },
   {
@@ -115,12 +132,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   |A&D| B | C | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "|A&D| 0 | 1 | 3 |√5 |\n",
+    "| B | 1 | 0 |√5 |√2 |\n",
+    "| C | 3 |√5 | 0 |√5 |\n",
+    "| E |√5 |√2 |√5 | 0 |"
    ]
   },
   {
@@ -129,11 +146,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
-    "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|     |A&B&D| C | E |\n",
+    "|-----|-----|---|---|\n",
+    "|A&B&D| 0   |√5 |√2 |\n",
+    "| C   |√5   | 0 |√5 |\n",
+    "|  E  |√2   |√5 | 0 |"
    ]
   },
   {
@@ -142,10 +159,10 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
-    "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|       |A&B&D&E| C |\n",
+    "|-------|-------|---|\n",
+    "|A&B&D&E|   0   | √5|\n",
+    "|   C   |  √5   | 0 |"
    ]
   },
   {
@@ -166,11 +183,11 @@
     "\n",
     "|   | A | B | C | D | E |\n",
     "|---|---|---|---|---|---|\n",
-    "| A | 0 |   |   |   |   |\n",
-    "| B |   | 0 |   |   |   |\n",
-    "| C |   |   | 0 |   |   |\n",
-    "| D |   |   |   | 0 |   |\n",
-    "| E |   |   |   |   | 0 |"
+    "| A | 0 | √2| 3 | 1 |√8 |\n",
+    "| B | √2| 0 |√5 | 1 |√2 |\n",
+    "| C | 3 |√5 | 0 |√10|√5 |\n",
+    "| D | 1 | 1 |√10| 0 |√5 |\n",
+    "| E |√8 |√2 | √5| √5| 0 |"
    ]
   },
   {
@@ -179,12 +196,12 @@
    "source": [
     "Step 2\n",
     "\n",
-    "|   |   |   |   |   |\n",
+    "|   |C&D| A | B | E |\n",
     "|---|---|---|---|---|\n",
-    "|   | 0 |   |   |   |\n",
-    "|   |   | 0 |   |   |\n",
-    "|   |   |   | 0 |   |\n",
-    "|   |   |   |   | 0 |"
+    "|C&D| 0 | 3 |√5 |√5 |\n",
+    "| A | 3 | 0 |√2 | 3 |\n",
+    "| B |√5 |√2 | 0 |√2 |\n",
+    "| E |√5 | 3 |√2 | 0 |"
    ]
   },
   {
@@ -193,11 +210,11 @@
    "source": [
     "Step 3\n",
     "\n",
-    "|   |   |   |   |\n",
-    "|---|---|---|---|\n",
-    "|   | 0 |   |   |\n",
-    "|   |   | 0 |   |\n",
-    "|   |   |   | 0 |"
+    "|     |C&D&A| B | E |\n",
+    "|-----|-----|---|---|\n",
+    "|C&D&A| 0   |√5 |√8 |\n",
+    "| B   |√5   | 0 |√2 |\n",
+    "| E   |v8   |√2 | 0 |"
    ]
   },
   {
@@ -206,24 +223,31 @@
    "source": [
     "Step 4\n",
     "\n",
-    "|   |   |   |\n",
-    "|---|---|---|\n",
-    "|   | 0 |   |\n",
-    "|   |   | 0 |"
+    "|       |C&D&A&E| B |\n",
+    "|-------|-------|---|\n",
+    "|C&D&A&E| 0     |√5 |\n",
+    "| B     |√5     | 0 |"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
-   "version": "3.11.1"
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.11.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
@@ -231,5 +255,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
