--- a/lecture_13/worksheet_13.ipynb
+++ b/lecture_13/worksheet_13.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 13\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jin Young Bang\n",
+    "\n",
+    "UID: U26738680\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -19,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +30,7 @@
        "<IPython.core.display.Image object>"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 1,
      "metadata": {
       "image/jpeg": {
        "height": 300,
@@ -58,7 +59,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "No"
+   ]
   },
   {
    "attachments": {},
@@ -70,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +99,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[1. 0. 1. 1. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 0. 1. 0. 0. 1. 0. 0. 0. 0. 1.\n",
+      "[1. 0. 0. 0. 0. 0. 1. 1. 1. 0. 1. 0. 1. 0. 1. 1. 0. 0. 1. 0. 0. 0. 0. 0.\n",
       " 0. 1. 1. 1.]\n"
      ]
     }
@@ -114,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -128,8 +131,8 @@
    "source": [
     "def gini(node):\n",
     "    frequencies = [\n",
-    "        ...,\n",
-    "        ...\n",
+    "        sum(node) / len(node),\n",
+    "        (len(node) - sum(node)) / len(node)\n",
     "    ]\n",
     "    return 1 - sum([f**2 for f in frequencies])\n",
     "\n",
@@ -146,26 +149,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "GINI of split on thalassemia =  0.13265306122448983\n",
-      "GINI of split on chest_pain =  0.5625\n"
+      "GINI of split on thalassemia =  0.23469387755102047\n",
+      "GINI of split on chest_pain =  0.4419642857142857\n"
      ]
     }
    ],
    "source": [
     "def gini_split(data, attr, target_name):\n",
-    "    ginis = [\n",
-    "        ...,\n",
-    "        ...\n",
+    "    splits = [\n",
+    "        data[data[attr] == 1][target_name],\n",
+    "        data[data[attr] == 0][target_name]\n",
     "    ]\n",
     "\n",
-    "    return ...\n",
+    "    return sum([len(node) * gini(node) for node in splits]) / len(data)\n",
+    "\n",
     "\n",
     "print(\"GINI of split on thalassemia = \", gini_split(data, \"thalassemia\", \"heart_disease\"))\n",
     "print(\"GINI of split on chest_pain = \", gini_split(data, \"chest_pain\", \"heart_disease\"))"
@@ -181,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -265,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,13 +286,13 @@
    "source": [
     "def predict(tree : Node, example):\n",
     "    if tree.left is None and tree.right is None:\n",
-    "        ...\n",
+    "        return tree.vote\n",
     "    \n",
     "    if example[tree.attr] == 0:\n",
-    "        ...\n",
+    "        return predict(tree.left, example)\n",
     "\n",
     "    if example[tree.attr] == 1:\n",
-    "        ...\n",
+    "        return predict(tree.right, example)\n",
     "\n",
     "    return 0\n",
     "\n",
@@ -308,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -316,7 +320,10 @@
     "    best_attr = None\n",
     "    for attr in data.dtype.names:\n",
     "        if attr != target_name:\n",
-    "            ...\n",
+    "            if not best_attr:\n",
+    "                best_attr = attr\n",
+    "            elif gini_split(data, attr, target_name) < gini_split(data, best_attr, target_name):\n",
+    "                best_attr = attr\n",
     "    return best_attr"
    ]
   },
@@ -330,7 +337,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -373,15 +380,26 @@
     "\n",
     "\n",
     "    def gini_split(self, data, attr):\n",
-    "        ...\n",
+    "        gini_sum = 0\n",
+    "        for val in set(data[attr]):\n",
+    "            mask = data[attr] == val\n",
+    "            gini_sum += gini(data[self.target_name][mask]) * sum(mask) / len(data[attr])\n",
+    "        return gini_sum\n",
     "\n",
     "\n",
     "    def get_majority_vote(self, data):\n",
-    "        ...\n",
+    "        return np.argmax(np.bincount(data[self.target_name].astype(int)))\n",
     "\n",
     "\n",
     "    def get_best_attribute(self, data):        \n",
-    "        ...\n",
+    "        best_attr = None\n",
+    "        for attr in data.dtype.names:\n",
+    "            if attr != self.target_name:\n",
+    "                if best_attr is None:\n",
+    "                    best_attr = attr\n",
+    "                elif self.gini_split(data, attr) < self.gini_split(data, best_attr):\n",
+    "                    best_attr = attr\n",
+    "        return best_attr\n",
     "\n",
     "\n",
     "    def build_tree(self, data, depth):        \n",
@@ -418,11 +436,18 @@
     "simple_tree.train()\n",
     "print(simple_tree)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -436,9 +461,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "76ca05dc3ea24b2e3b98cdb7774adfbb40773424bf5109b477fd793f623715af"
@@ -446,5 +470,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
