--- a/lecture_14/worksheet_14.ipynb
+++ b/lecture_14/worksheet_14.ipynb
@@ -7,8 +7,9 @@
    "source": [
     "# Worksheet 14\n",
     "\n",
-    "Name:  \n",
-    "UID: \n",
+    "Name: Jin Young Bang\n",
+    "\n",
+    "UID: U26738680\n",
     "\n",
     "### Topics\n",
     "\n",
@@ -41,7 +42,12 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "- 3/7\n",
+    "- 1/3\n",
+    "- 3/7\n",
+    "- 3/3 = 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -58,7 +64,31 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "(Yes, Married, Mid) -> No\n",
+    "```\n",
+    "P(yes | C = yes) * P(Married | C = yes) * P(Mid | C = yes) * P(yes) = 0\n",
+    "P(yes | C = no) * P(Married | C = no) * P(Mid | C = no) * P(no) = 3/7 * 4/7 * 1/7 * 7/10 = 6/245\n",
+    "```\n",
+    "\n",
+    "(No, Divorced, High) -> No\n",
+    "```\n",
+    "P(no | C = yes) * P(Divorced | C = yes) * P(High | C = yes) * P(yes) = 0\n",
+    "P(no | C = no) * P(Divorced | C = no) * P(High | C = no) * P(no) = 4/7 * 1/7 * 3/7 * 7/10 = 6/245\n",
+    "```\n",
+    "\n",
+    "(No, Single, High) -> No\n",
+    "```\n",
+    "P(no | C = yes) * P(Single | C = yes) * P(High | C = yes) * P(yes) = 0\n",
+    "P(no | C = no) * P(Single | C = no) * P(High | C = no) * P(no) = 4/7 * 2/7 * 3/7 * 7/10 = 12/245\n",
+    "```\n",
+    "\n",
+    "(No, Divorced, Low) -> No\n",
+    "```\n",
+    "P(no | C = yes) * P(Divorced | C = yes) * P(Low | C = yes) * P(yes) = 0\n",
+    "P(no | C = no) * P(Divorced | C = no) * P(Low | C = no) * P(no) = 4/7 * 1/7 * 3/7 * 7/10 = 6/245\n",
+    "```"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -71,15 +101,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2. 1.]\n",
+      " [3. 4.]]\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
+    "\n",
     "actual_class = [\"Yes\", \"No\", \"No\", \"Yes\", \"No\", \"No\", \"Yes\", \"No\", \"No\", \"No\"]\n",
     "predicted_class = [\"Yes\", \"No\", \"Yes\", \"No\", \"No\", \"No\", \"Yes\", \"Yes\", \"Yes\", \"No\"]\n",
     "\n",
     "def confusion_matrix(actual, predicted):\n",
-    "    return\n",
+    "    TP, TN, FP, FN = 0, 0, 0, 0\n",
+    "\n",
+    "    matrix = np.zeros((2, 2))\n",
+    "    \n",
+    "    for actual, pred in zip(actual, predicted):\n",
+    "        if actual == \"Yes\" and pred == \"Yes\":\n",
+    "            TP += 1\n",
+    "        elif actual == \"No\" and pred == \"No\":\n",
+    "            TN += 1\n",
+    "        elif actual == \"No\" and pred == \"Yes\":\n",
+    "            FP += 1\n",
+    "        elif actual == \"Yes\" and pred == \"No\":\n",
+    "            FN += 1\n",
+    "\n",
+    "    matrix[0][0] = TP\n",
+    "    matrix[0][1] = FN\n",
+    "    matrix[1][0] = FP\n",
+    "    matrix[1][1] = TN\n",
+    "    return matrix\n",
     "\n",
     "print(confusion_matrix(actual_class, predicted_class))"
    ]
@@ -101,7 +160,9 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "`-1 * 2 + 5 * 1 + 3 * 10 + 4 * 0 = 33`"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -112,10 +173,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "33.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def return_cost(actual, predicted, cost_matrix):\n",
+    "\n",
+    "    conf_matrix = confusion_matrix(actual, predicted)\n",
+    "\n",
+    "    c = 0\n",
+    "\n",
+    "    for i in range(len(cost_matrix)):\n",
+    "        for j in range(len(cost_matrix[0])):\n",
+    "            c += cost_matrix[i][j] * conf_matrix[i][j]\n",
+    "\n",
+    "    return c \n",
+    "\n",
+    "cost_matrix = np.array([[-1, 5], [10, 0]])\n",
+    "\n",
+    "return_cost(actual_class, predicted_class, cost_matrix)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -133,10 +221,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def get_accuracy(actual, predicted):\n",
+    "\n",
+    "    conf_matrix = confusion_matrix(actual, predicted)\n",
+    "\n",
+    "    return (conf_matrix[0][0] + conf_matrix[1][1])/conf_matrix.sum()\n",
+    "    \n",
+    "def get_precision(actual, predicted):\n",
+    "\n",
+    "    conf_matrix = confusion_matrix(actual, predicted)\n",
+    "\n",
+    "    return conf_matrix[0][0]/conf_matrix.sum(axis = 0)[0]\n",
+    "\n",
+    "    \n",
+    "def get_recall(actual, predicted):\n",
+    "    \n",
+    "    conf_matrix = confusion_matrix(actual, predicted)\n",
+    "\n",
+    "    return conf_matrix[0][0]/conf_matrix.sum(axis = 1)[0]\n",
+    "    \n",
+    "def get_f1(actual, predicted):\n",
+    "    \n",
+    "    precision = get_precision(actual, predicted)\n",
+    "    recall = get_recall(actual, predicted)\n",
+    "\n",
+    "    return 2*precision*recall/(precision + recall)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Accuracy : 0.6\n",
+      "Precision : 0.4\n",
+      "Recall : 0.6666666666666666\n",
+      "F1 Score : 0.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Accuracy : {get_accuracy(actual_class, predicted_class)}')\n",
+    "print(f'Precision : {get_precision(actual_class, predicted_class)}')\n",
+    "print(f'Recall : {get_recall(actual_class, predicted_class)}')\n",
+    "print(f'F1 Score : {get_f1(actual_class, predicted_class)}')"
+   ]
   },
   {
    "attachments": {},
@@ -267,7 +404,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -281,9 +418,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.1"
+   "version": "3.11.5"
   },
-  "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
     "hash": "e7370f93d1d0cde622a1f8e1c04877d8463912d04d973331ad4851f04de6915a"
@@ -291,5 +427,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
